--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
+
+/* Set some default transition classes */
+.v-enter-active { @apply transition ease-in-out duration-500 transform delay-150 }
+.v-enter { @apply opacity-0 translate-y-10 }
+.v-enter-to { @apply opacity-100 translate-y-0 }
+.v-leave-active { @apply absolute transition ease-in-out duration-300 transform }
+.v-leave { @apply opacity-100 translate-y-0 }
+.v-leave-to { @apply opacity-0 }
+
 @tailwind utilities;
